syntax = "proto3";

package api;

service Movie {
    rpc GetMovie(GetMovieRequest) returns (GetMovieResponse) {}
}

message GetMovieRequest {
    int64 movie_id = 1;
}

message GetMovieResponse {
    int64  id = 1;
    string name = 2;
    string poster = 3;
    string movie_url = 4;
}